--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
       context: .
     stop_signal: SIGINT
     restart: unless-stopped
-    command: "python3 main.py -a 1"
+    command: "uv run main.py -a 1"
     volumes:
       - .:/app
